# stm32-cmake-static-analysis-docker-and-ci

./: .gitignore  .mxproject  .project  CMakeLists.txt  Dockerfile  README.md  STM32L476.ioc  fw_version.txt
.github/workflows/: ci-pipeline.yml
Core/Src/: main.c  stm32l4xx_hal_msp.c
Drivers/: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
cmake/: arm-none-eabi-gcc.cmake  collect-sources.cmake  constants.cmake  cppcheck.cmake
